--- a/Console/BExIS.Web.Shell/Areas/DDM/Views/Data/_previewDatastructure.cshtml
+++ b/Console/BExIS.Web.Shell/Areas/DDM/Views/Data/_previewDatastructure.cshtml
@@ -93,7 +93,7 @@
                             )
 
                         .Pageable(paging =>
-                            paging.PageSize(10, new int[] { 10, 20, 50, 100, 500 })
+                            paging.PageSize(int.Parse(System.Web.Configuration.WebConfigurationManager.AppSettings["defautPageSize"]), new int[] { 10, 20, 50, 100, 500 })
                             .Style(pagerStyles)
                             .Position(GridPagerPosition.Both)
                             .Total(dt.Rows.Count)
